appId: com.deancochran.gradientpeak.dev
env:
  STANDARD_USER_EMAIL: "test@example.com"
  STANDARD_USER_PASS: "password123"
---
- runFlow:
    file: ../../reusable/open_own_profile.yaml
    env:
      STANDARD_USER_EMAIL: "${STANDARD_USER_EMAIL}"
      STANDARD_USER_PASS: "${STANDARD_USER_PASS}"
- tapOn:
    id: "update-email"
- assertVisible:
    id: "account-email-input"
- assertVisible:
    id: "account-email-submit-button"
- tapOn:
    id: "change-password"
- assertVisible:
    id: "account-current-password-input"
- assertVisible:
    id: "account-new-password-input"
- assertVisible:
    id: "account-confirm-password-input"
- assertVisible:
    id: "account-password-submit-button"
- tapOn:
    id: "user-detail-options-trigger"
- tapOn:
    id: "user-detail-options-edit"
- extendedWaitUntil:
    visible:
      id: "profile-edit-screen"
    timeout: 10000
- assertVisible:
    id: "profile-edit-avatar-button"
- assertVisible:
    id: "profile-edit-save-button"
